test/Fail/Issue2868.err
Issue2868.agda:18.10-14: error: [UnequalTerms]
a ≡ a !=< A
when checking that the expression same has type A
